--- a/Assets/WebGLTemplates/WebGL_9_16/index.html
+++ b/Assets/WebGLTemplates/WebGL_9_16/index.html
@@ -79,15 +79,15 @@
            align-items: center;
        }
        #progress{
-           top: 50%;
+           top: 60%;
        }
        #progress #full {
-           background: linear-gradient(90deg, rgba(83,136,229,1) 19%, rgba(109,63,240,1) 87%);
+           background: linear-gradient(90deg, rgb(255, 255, 255) 19%, rgb(255, 255, 255) 87%);
            height:15px!important;
            border-radius:15px;
        }
        #progress p{
-           color:#6d3ff0;
+           color:#ffffff;
            font-family: Arial, Helvetica, sans-serif;;
        }
        /*
