--- a/Assets/WebGLTemplates/WebGL_9_16/index.html
+++ b/Assets/WebGLTemplates/WebGL_9_16/index.html
@@ -4,9 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, shrink-to-fit=no">      <!-- custom input -->
-    <title>Game Name</title>
+    <title>A path to Happiness</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="favicon.png">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-X55MX0CJ3Q"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-X55MX0CJ3Q");
+    </script>
     <style>
         html{
            height: 100%;
@@ -280,20 +291,7 @@
         }
     </script>
 
-    <!-- Google tag (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-X55MX0CJ3Q"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-X55MX0CJ3Q");
-    </script>
+    
     <script>
         function pushbtnEventGoogle({
             event = "gtmEvent",
